<resources>
    <string name="app_name">Frog Weather</string>

    <!--  TAB TITLES  -->
    <string name="lbl_ten_days_tab">10 DAYS</string>
    <string name="lbl_tomorrow_tab">TOMORROW</string>
    <string name="lbl_today_tab">TODAY</string>

    <!--  FRAGMENT TITLES  -->
    <string name="lbl_settings_fragment_title">Settings</string>
    <string name="lbl_weather_map_fragment_title">Weather Map</string>

    <!--  SETTINGS SECTOR TITLES  -->
    <string name="lbl_settings_sector_title">Settings</string>
    <string name="lbl_units_sector_title">Units</string>
    <string name="lbl_display_sector_title">Display</string>
    <string name="lbl_notification_sector_title">Notification</string>

    <!--  SETTINGS TAB TITLES  -->
    <string name="lbl_detect_location_tab">Detect Location</string>
    <string name="lbl_hour_format_tab">AM/PM</string>
    <string name="lbl_temperature_units_tab">Temperature units</string>
    <string name="lbl_length_units_tab">Length units</string>
    <string name="lbl_speed_units_tab">Speed units</string>
    <string name="lbl_distance_units_tab">Distance units</string>
    <string name="lbl_pressure_units_tab">Pressure units</string>
    <string name="lbl_wind_direction_format_tab">Wind direction format</string>
    <string name="lbl_show_notification_tab">Show weather in notification</string>
    <string name="lbl_notification_type_tab">Notification type</string>

    <!--  SETTINGS TAB OPTIONS  -->
    <string name="lbl_celsius">Celsius</string>
    <string name="lbl_fahrenheit">Fahrenheit</string>
    <string name="lbl_kelvin">Kelvin</string>
    <string name="lbl_millimeters">Millimeters (mm)</string>
    <string name="lbl_inches">Inches (in)</string>
    <string name="lbl_meters">Meters per second (m/s)</string>
    <string name="lbl_kilometers">Kilometers per hour (kph)</string>
    <string name="lbl_miles">Miles per hour (mph)</string>
    <string name="lbl_beaufort">Beaufort wind scale (bft)</string>
    <string name="lbl_knots">Knots (kn)</string>
    <string name="lbl_km">km</string>
    <string name="lbl_mi">mi</string>
    <string name="lbl_hpa">hPa</string>
    <string name="lbl_kpa">kPa</string>
    <string name="lbl_mm_hg">mmHg</string>
    <string name="lbl_in_hg">inHg</string>
    <string name="lbl_no_indications">No indication</string>
    <string name="lbl_arrows">Arrows</string>
    <string name="lbl_abbreviations">Abbreviations</string>
    <string name="lbl_default_android_view">Default Android view</string>
    <string name="lbl_simple_notification">Simple notification</string>

    <!--  DRAWER TITLES  -->
    <string name="lbl_weather_map_menu_title">Weather Map</string>
    <string name="lbl_refresh_menu_title">Refresh</string>
    <string name="lbl_detect_location_menu_title">Detect Location</string>
    <string name="lbl_settings_menu_title">Settings</string>
    <string name="lbl_cancel_button">Cancel</string>
    <string name="lbl_location_settings_dialog_title">Location Settings</string>
    <string name="lbl_settings_button">settings</string>
    <string name="lbl_location_permission_dialog">Location is not enabled. Do you wish to go to the settings menu?</string>

    <!--  ONE DAY CURRENT WEATHER  -->
    <string name="lbl_weather_date_time_today">Today, %s %s – %s</string>
    <string name="lbl_weather_date_time_tomorrow">Tomorrow, %s %s</string>
    <string name="lbl_weather_min_max_temperature">Max %s˚ - Min %s˚</string>
    <string name="lbl_temperature_unit_celsius">˚C</string>
    <string name="lbl_temperature_unit_fahrenheit">˚F</string>
    <string name="lbl_temperature_unit_kelvin">K</string>
    <string name="lbl_weather_feels_like">Feels like %s˚</string>

    <!--  ONE DAY HOURLY FORECAST  -->
    <string name="lbl_hourly_forecast_precipitation">%s%%</string>
    <string name="lbl_hourly_forecast_temperature">%s˚</string>

    <!-- ONE DAY CHANCE  -->
    <string name="lbl_short_precipitation_chance">Chance %s%%</string>

    <!--  ONE DAY DETAILS  -->
    <string name="lbl_details">Details</string>
    <string name="lbl_humidity">Humidity</string>
    <string name="lbl_dew_point">Dew point</string>
    <string name="lbl_pressure">Pressure</string>
    <string name="lbl_uv_index">UV Index</string>
    <string name="lbl_visibility">Visibility</string>
    <string name="lbl_humidity_value">%s %%</string>
    <string name="lbl_pressure_value_hpa">%s hPa/mBar</string>
    <string name="lbl_pressure_value_kpa">%s kPa</string>
    <string name="lbl_pressure_value_mmhg">%s mm Hg</string>
    <string name="lbl_pressure_value_inhg">%s in Hg</string>
    <string name="lbl_visibility_value_km">%s km</string>
    <string name="lbl_visibility_value_mi">%s mi</string>

    <!--  ONE DAY PRECIPITATION  -->
    <string name="lbl_precipitation">Precipitation</string>
    <string name="lbl_precipitation_chance">Chance</string>
    <string name="lbl_length_unit_mm">mm</string>
    <string name="lbl_length_unit_in">in</string>
    <string name="lbl_precipitation_volume">Volume \n (%s)</string>
    <string name="lbl_precipitation_chance_value">%s %%</string>
    <string name="lbl_precipitation_volume_no_value">-</string>

    <!--  ONE DAY WIND  -->
    <string name="lbl_wind">Wind</string>
    <string name="lbl_wind_description">Wind description</string>
    <string name="lbl_wind_speed_mps">m/s</string>
    <string name="lbl_wind_speed_kph">kph</string>
    <string name="lbl_wind_speed_mph">mph</string>
    <string name="lbl_wind_speed_bft">bft</string>
    <string name="lbl_wind_speed_kn">kn</string>
    <string name="lbl_wind_gust">Gust</string>

    <string name="lbl_direction_n">N</string>
    <string name="lbl_direction_nne">NNE</string>
    <string name="lbl_direction_ne">NE</string>
    <string name="lbl_direction_ene">ENE</string>
    <string name="lbl_direction_e">E</string>
    <string name="lbl_direction_ese">ESE</string>
    <string name="lbl_direction_se">SE</string>
    <string name="lbl_direction_sse">SSE</string>
    <string name="lbl_direction_s">S</string>
    <string name="lbl_direction_ssw">SSW</string>
    <string name="lbl_direction_sw">SW</string>
    <string name="lbl_direction_wsw">WSW</string>
    <string name="lbl_direction_w">W</string>
    <string name="lbl_direction_wnw">WNW</string>
    <string name="lbl_direction_nw">NW</string>
    <string name="lbl_direction_nnw">NNW</string>


    <!--  TEN DAYS HEADER  -->
    <string name="lbl_ten_days_header_date">%s %s</string>
    <string name="lbl_ten_days_header_chance">%s%%</string>
    <string name="lbl_ten_days_header_temperature">%s˚</string>

    <!--  TEN DAYS DETAILS  -->
    <string name="lbl_ten_days_details_volume">Volume</string>
    <string name="lbl_ten_days_details_sunrise">Sunrise</string>
    <string name="lbl_ten_days_details_sunset">Sunset</string>
    <string name="lbl_ten_days_details_humidity">%s%%</string>

    <!--  TEN DAYS HOURLY FORECAST  -->
    <string name="lbl_ten_days_hourly_forecast">%s˚</string>

    <!--  WEATHER MAP  -->
    <string name="lbl_weather_map_current_location">Your current location: %s</string>
    <string name="lbl_weather_map_saved_weather_entries">Your saved weather entries</string>
    <string name="lbl_weather_add_button">Add weather for current location</string>
    <string name="lbl_weather_update_button">Update weather for current location</string>
    <string name="lbl_weather_delete_button">Delete weather for current location</string>
</resources>